[package]
name = "epub-io"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
toml = { version = "0.8.14", features = ["preserve_order"] }
epub = "2.1.2"
html2text = "0.13.6"
colored = "2.1.0" # TERMINAL COLORS
itertools = "0.13.0"
clap = { version = "4.5.20", features = ["derive"] }
html-escape = "0.2.13"
lazy_static = "1.5.0"